Make sure the rounded corners don't overflow out of container

--- a/src/styles/components/ScrollContainer.scss
+++ b/src/styles/components/ScrollContainer.scss
@@ -6,6 +6,7 @@
 @import 'UserContent';
 
 .ScrollContainer {
+  border-radius: #{8/$font-size}rem;
   box-sizing: border-box;
 }
 
